tests/snapshots/debug_snapshots__debug_fileset_auto_combined.snap
---
source: tests/debug_snapshots.rs
expression: snap
---
STDOUT:
==> a.json <==
{
  "a": 1
}

==> b.yaml <==
k: 2

DEBUG (normalized):
{
  "budgets_effective": {
    "bytes": 40000,
    "chars": null,
    "lines": null,
    "per_slot_bytes": 20000,
    "per_slot_chars": null,
    "per_slot_lines": null
  },
  "counts": {
    "included": 0,
    "omitted_children": 0,
    "total_nodes": 0
  },
  "fileset": [
    {
      "content_included": 2,
      "content_total": 2,
      "included": true,
      "name": "a.json",
      "rendered_empty": false
    },
    {
      "content_included": 2,
      "content_total": 2,
      "included": true,
      "name": "b.yaml",
      "rendered_empty": false
    }
  ],
  "output_stats": {
    "bytes": 49,
    "chars": 0,
    "lines": 7
  },
  "priority": [
    {
      "id": 0,
      "included": true,
      "kind": "object",
      "rank": 0,
      "score": 1
    },
    {
      "id": 0,
      "included": true,
      "key_in_object": "a.json",
      "kind": "object",
      "rank": 1,
      "score": 2
    },
    {
      "id": 0,
      "included": true,
      "key_in_object": "b.yaml",
      "kind": "object",
      "rank": 2,
      "score": 2
    },
    {
      "id": 0,
      "included": true,
      "key_in_object": "a",
      "kind": "string",
      "rank": 3,
      "score": 3
    },
    {
      "id": 0,
      "included": true,
      "key_in_object": "k",
      "kind": "string",
      "rank": 4,
      "score": 3
    }
  ],
  "renderer": {
    "array_sampler": "default",
    "prefer_tail_arrays": false,
    "style": "default",
    "template": "auto"
  },
  "root": {
    "children": [
      {
        "children": [
          {
            "atomic_token": "1",
            "id": 0,
            "key_in_object": "a",
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "key_in_object": "a.json",
        "kind": "object",
        "metrics": {
          "object_len": 1
        }
      },
      {
        "children": [
          {
            "atomic_token": "2",
            "id": 0,
            "key_in_object": "k",
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "key_in_object": "b.yaml",
        "kind": "object",
        "metrics": {
          "object_len": 1
        }
      }
    ],
    "fileset_root": true,
    "id": 0,
    "kind": "object",
    "metrics": {
      "object_len": 2
    }
  },
  "selection": {
    "top_k": 5
  },
  "template": "auto"
}
