tests/snapshots/debug_snapshots__debug_json_stdin_strict_combined.snap
---
source: tests/debug_snapshots.rs
expression: snap
---
STDOUT:
{
  "a": 1,
  "b": {
    "c": 2
  }
}

DEBUG (normalized):
{
  "budgets_effective": {
    "bytes": 200,
    "chars": null,
    "lines": null,
    "per_slot_bytes": 200,
    "per_slot_chars": null,
    "per_slot_lines": null
  },
  "counts": {
    "included": 0,
    "omitted_children": 0,
    "total_nodes": 0
  },
  "output_stats": {
    "bytes": 37,
    "chars": 0,
    "lines": 6
  },
  "priority": [
    {
      "id": 0,
      "included": true,
      "kind": "object",
      "rank": 0,
      "score": 1
    },
    {
      "id": 0,
      "included": true,
      "key_in_object": "a",
      "kind": "number",
      "rank": 1,
      "score": 2
    },
    {
      "id": 0,
      "included": true,
      "key_in_object": "b",
      "kind": "object",
      "rank": 2,
      "score": 2
    },
    {
      "id": 0,
      "included": true,
      "key_in_object": "c",
      "kind": "number",
      "rank": 3,
      "score": 3
    }
  ],
  "renderer": {
    "array_sampler": "default",
    "prefer_tail_arrays": false,
    "style": "strict",
    "template": "json"
  },
  "root": {
    "children": [
      {
        "atomic_token": "1",
        "id": 0,
        "key_in_object": "a",
        "kind": "number",
        "metrics": {}
      },
      {
        "children": [
          {
            "atomic_token": "2",
            "id": 0,
            "key_in_object": "c",
            "kind": "number",
            "metrics": {}
          }
        ],
        "id": 0,
        "key_in_object": "b",
        "kind": "object",
        "metrics": {
          "object_len": 1
        }
      }
    ],
    "id": 0,
    "kind": "object",
    "metrics": {
      "object_len": 2
    }
  },
  "selection": {
    "top_k": 4
  },
  "template": "json"
}
